added changes stemming from the code review of the merge into production

--- a/snsTrigger_returnHTML.html
+++ b/snsTrigger_returnHTML.html
@@ -297,7 +297,6 @@
         //setup methods to make life easier...
         arrayOfCustomTests.forEach((customTest) => {
             // create a global lookup table
-            //lookupTable[customTest.result_id] = JSON.parse(customTest.data);
             lookupTable[customTest.result_id] = customTest.data;
             // group the tests into cohorts based on timestamp/ttl
             testCohorts[customTest.ttl] = testCohorts[customTest.ttl] || [];
@@ -499,7 +498,7 @@
                 result_id = inputValue;
             }
             if (result_id.includes('adzone=kinjatest')){
-               return 'adzone\=kinjatest';
+               return 'adzone=kinjatest';
             } else if (result_id.includes('no3rdparty')){
                 return 'no3rdparty';
             } else {
@@ -511,7 +510,7 @@
         function getBasePerfData(targetID){
             let obj = {
                 firstMeaningfulPaintValue: Math.floor(_findAudit('first-meaningful-paint').rawValue),
-                totalByteWeightValue: Math.floor(_findAudit('total-byte-weight').displayValue[1]),
+                totalByteWeightValue: Math.floor(_findAudit('total-byte-weight').rawValue / 1024),
                 domNodesValue: Math.floor(_findAudit('dom-size').rawValue)
             }
             return obj;
